Terraform_files_ec2/gateway.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.myvpc.id
  tags = {
    "name" = "myigw"
  }
}
